// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanResultsToUnifiedResults Null ScanResults input returns empty output 1`] = `Array []`;

exports[`ScanResultsToUnifiedResults ScanResults with 1 supported rule 1`] = `
Array [
  Object {
    "description": "This describes Rule #1",
    "guidance": Array [],
    "id": "Rule #1",
    "uid": "gguid-mock-stub",
    "url": null,
  },
]
`;

exports[`ScanResultsToUnifiedResults ScanResults with 1 supported rule that repeats 1`] = `
Array [
  Object {
    "description": "This describes Rule #1",
    "guidance": Array [],
    "id": "Rule #1",
    "uid": "gguid-mock-stub",
    "url": null,
  },
]
`;

exports[`ScanResultsToUnifiedResults ScanResults with a mix of supported and unsupported rules 1`] = `
Array [
  Object {
    "description": "This describes Rule #3",
    "guidance": Array [],
    "id": "Rule #3",
    "uid": "gguid-mock-stub",
    "url": null,
  },
  Object {
    "description": "This describes Rule #1",
    "guidance": Array [],
    "id": "Rule #1",
    "uid": "gguid-mock-stub",
    "url": null,
  },
  Object {
    "description": "This describes Rule #2",
    "guidance": Array [],
    "id": "Rule #2",
    "uid": "gguid-mock-stub",
    "url": null,
  },
]
`;

exports[`ScanResultsToUnifiedResults ScanResults with no RuleResults returns empty output 1`] = `Array []`;

exports[`ScanResultsToUnifiedResults ScanResults with only unsupported rules 1`] = `Array []`;
